[tool.poetry]
name = "pybio"
version = "0.1.0"
description = "Aplicação local com api para modulo biometrico"
authors = ["Tales Monteiro Melquiades <talesmelquiades@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
